--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,22 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.json:json:20171018'
+    compile 'org.slf4j:slf4j-log4j12:1.8.0-beta4'
+}
+
+jar {
+    baseName = 'YandexIntro'
+    from {
+        configurations.compile.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+    exclude "META-INF/*.SF", "META-INF/*.RSA"
+    manifest{
+        attributes 'Main-Class': 'me.herrlestrate.yandexintro.Main',
+                'Implementation-Title': 'YandexIntro',
+                'Implementation-Version': 1.0
+    }
+
 }
